# vclaw

./: .gitignore  README.md  pyproject.toml
app/: cli.py  runtime_config.py
app/api/: app.py
app/clients/: __init__.py  claude.py
app/schemas/: __init__.py  models.py
app/services/: __init__.py  agents.py  context.py  memory_workspace.py  orchestrator.py  self_edit.py  session_manager.py  shell.py  tools.py  vector_memory.py  workflows.py
app/storage/: __init__.py  database.py
frontend/: index.html
