[project]
name = "vclaw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.128.8",
    "uvicorn>=0.39.0",
    "httpx>=0.28.1",
    "pydantic>=2.10.6",
    "scikit-learn>=1.5.2",
]

[project.scripts]
vclaw = "app.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
